src/PDDLParser/Generated/PddlParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Grammar/Pddl.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace AIInGames.Planning.PDDL.Generated {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class PddlParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, VARIABLE=38, 
		NAME=39, WS=40, LINE_COMMENT=41;
	public const int
		RULE_pddlDoc = 0, RULE_domain = 1, RULE_requireDef = 2, RULE_typesDef = 3, 
		RULE_predicatesDef = 4, RULE_actionDef = 5, RULE_problem = 6, RULE_objectDecl = 7, 
		RULE_init = 8, RULE_initEl = 9, RULE_goal = 10, RULE_goalDesc = 11, RULE_effect = 12, 
		RULE_cEffect = 13, RULE_condEffect = 14, RULE_pEffect = 15, RULE_atomicFormulaSkeleton = 16, 
		RULE_atomicFormula = 17, RULE_literal = 18, RULE_term = 19, RULE_predicate = 20, 
		RULE_typedVariableList = 21, RULE_singleTypeVarList = 22, RULE_typedNameList = 23, 
		RULE_singleTypeNameList = 24, RULE_type = 25, RULE_primitiveType = 26, 
		RULE_variable = 27, RULE_name = 28, RULE_requireKey = 29;
	public static readonly string[] ruleNames = {
		"pddlDoc", "domain", "requireDef", "typesDef", "predicatesDef", "actionDef", 
		"problem", "objectDecl", "init", "initEl", "goal", "goalDesc", "effect", 
		"cEffect", "condEffect", "pEffect", "atomicFormulaSkeleton", "atomicFormula", 
		"literal", "term", "predicate", "typedVariableList", "singleTypeVarList", 
		"typedNameList", "singleTypeNameList", "type", "primitiveType", "variable", 
		"name", "requireKey"
	};

	private static readonly string[] _LiteralNames = {
		null, "'('", "'define'", "'domain'", "')'", "':requirements'", "':types'", 
		"':predicates'", "':action'", "':parameters'", "':precondition'", "':effect'", 
		"'problem'", "':domain'", "':objects'", "':init'", "':goal'", "'and'", 
		"'or'", "'not'", "'imply'", "'exists'", "'forall'", "'when'", "'-'", "'either'", 
		"'at'", "'over'", "':strips'", "':typing'", "':negative-preconditions'", 
		"':disjunctive-preconditions'", "':equality'", "':existential-preconditions'", 
		"':universal-preconditions'", "':quantified-preconditions'", "':conditional-effects'", 
		"':adl'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "VARIABLE", "NAME", "WS", "LINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Pddl.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static PddlParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public PddlParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public PddlParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class PddlDocContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DomainContext domain() {
			return GetRuleContext<DomainContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ProblemContext problem() {
			return GetRuleContext<ProblemContext>(0);
		}
		public PddlDocContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pddlDoc; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPddlVisitor<TResult> typedVisitor = visitor as IPddlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPddlDoc(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PddlDocContext pddlDoc() {
		PddlDocContext _localctx = new PddlDocContext(Context, State);
		EnterRule(_localctx, 0, RULE_pddlDoc);
		try {
			State = 62;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 60;
				domain();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 61;
				problem();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DomainContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RequireDefContext requireDef() {
			return GetRuleContext<RequireDefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypesDefContext typesDef() {
			return GetRuleContext<TypesDefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PredicatesDefContext predicatesDef() {
			return GetRuleContext<PredicatesDefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ActionDefContext[] actionDef() {
			return GetRuleContexts<ActionDefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ActionDefContext actionDef(int i) {
			return GetRuleContext<ActionDefContext>(i);
		}
		public DomainContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_domain; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPddlVisitor<TResult> typedVisitor = visitor as IPddlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDomain(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DomainContext domain() {
		DomainContext _localctx = new DomainContext(Context, State);
		EnterRule(_localctx, 2, RULE_domain);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 64;
			Match(T__0);
			State = 65;
			Match(T__1);
			State = 66;
			Match(T__0);
			State = 67;
			Match(T__2);
			State = 68;
			name();
			State = 69;
			Match(T__3);
			State = 71;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				{
				State = 70;
				requireDef();
				}
				break;
			}
			State = 74;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				{
				State = 73;
				typesDef();
				}
				break;
			}
			State = 77;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				{
				State = 76;
				predicatesDef();
				}
				break;
			}
			State = 82;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__0) {
				{
				{
				State = 79;
				actionDef();
				}
				}
				State = 84;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 85;
			Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RequireDefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public RequireKeyContext[] requireKey() {
			return GetRuleContexts<RequireKeyContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public RequireKeyContext requireKey(int i) {
			return GetRuleContext<RequireKeyContext>(i);
		}
		public RequireDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_requireDef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPddlVisitor<TResult> typedVisitor = visitor as IPddlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRequireDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RequireDefContext requireDef() {
		RequireDefContext _localctx = new RequireDefContext(Context, State);
		EnterRule(_localctx, 4, RULE_requireDef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 87;
			Match(T__0);
			State = 88;
			Match(T__4);
			State = 90;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 89;
				requireKey();
				}
				}
				State = 92;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 274609471488L) != 0) );
			State = 94;
			Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypesDefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TypedNameListContext typedNameList() {
			return GetRuleContext<TypedNameListContext>(0);
		}
		public TypesDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typesDef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPddlVisitor<TResult> typedVisitor = visitor as IPddlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypesDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypesDefContext typesDef() {
		TypesDefContext _localctx = new TypesDefContext(Context, State);
		EnterRule(_localctx, 6, RULE_typesDef);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 96;
			Match(T__0);
			State = 97;
			Match(T__5);
			State = 98;
			typedNameList();
			State = 99;
			Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PredicatesDefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AtomicFormulaSkeletonContext[] atomicFormulaSkeleton() {
			return GetRuleContexts<AtomicFormulaSkeletonContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public AtomicFormulaSkeletonContext atomicFormulaSkeleton(int i) {
			return GetRuleContext<AtomicFormulaSkeletonContext>(i);
		}
		public PredicatesDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_predicatesDef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPddlVisitor<TResult> typedVisitor = visitor as IPddlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPredicatesDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PredicatesDefContext predicatesDef() {
		PredicatesDefContext _localctx = new PredicatesDefContext(Context, State);
		EnterRule(_localctx, 8, RULE_predicatesDef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 101;
			Match(T__0);
			State = 102;
			Match(T__6);
			State = 104;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 103;
				atomicFormulaSkeleton();
				}
				}
				State = 106;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__0 );
			State = 108;
			Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionDefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypedVariableListContext typedVariableList() {
			return GetRuleContext<TypedVariableListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GoalDescContext goalDesc() {
			return GetRuleContext<GoalDescContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EffectContext effect() {
			return GetRuleContext<EffectContext>(0);
		}
		public ActionDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_actionDef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPddlVisitor<TResult> typedVisitor = visitor as IPddlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitActionDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ActionDefContext actionDef() {
		ActionDefContext _localctx = new ActionDefContext(Context, State);
		EnterRule(_localctx, 10, RULE_actionDef);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110;
			Match(T__0);
			State = 111;
			Match(T__7);
			State = 112;
			name();
			State = 113;
			Match(T__8);
			State = 114;
			Match(T__0);
			State = 115;
			typedVariableList();
			State = 116;
			Match(T__3);
			State = 117;
			Match(T__9);
			State = 121;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				{
				State = 118;
				goalDesc();
				}
				break;
			case 2:
				{
				State = 119;
				Match(T__0);
				State = 120;
				Match(T__3);
				}
				break;
			}
			State = 123;
			Match(T__10);
			State = 127;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
			case 1:
				{
				State = 124;
				effect();
				}
				break;
			case 2:
				{
				State = 125;
				Match(T__0);
				State = 126;
				Match(T__3);
				}
				break;
			}
			State = 129;
			Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProblemContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NameContext[] name() {
			return GetRuleContexts<NameContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NameContext name(int i) {
			return GetRuleContext<NameContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public InitContext init() {
			return GetRuleContext<InitContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GoalContext goal() {
			return GetRuleContext<GoalContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ObjectDeclContext objectDecl() {
			return GetRuleContext<ObjectDeclContext>(0);
		}
		public ProblemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_problem; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPddlVisitor<TResult> typedVisitor = visitor as IPddlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProblem(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProblemContext problem() {
		ProblemContext _localctx = new ProblemContext(Context, State);
		EnterRule(_localctx, 12, RULE_problem);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 131;
			Match(T__0);
			State = 132;
			Match(T__1);
			State = 133;
			Match(T__0);
			State = 134;
			Match(T__11);
			State = 135;
			name();
			State = 136;
			Match(T__3);
			State = 137;
			Match(T__0);
			State = 138;
			Match(T__12);
			State = 139;
			name();
			State = 140;
			Match(T__3);
			State = 142;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
			case 1:
				{
				State = 141;
				objectDecl();
				}
				break;
			}
			State = 144;
			init();
			State = 145;
			goal();
			State = 146;
			Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ObjectDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TypedNameListContext typedNameList() {
			return GetRuleContext<TypedNameListContext>(0);
		}
		public ObjectDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_objectDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPddlVisitor<TResult> typedVisitor = visitor as IPddlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitObjectDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ObjectDeclContext objectDecl() {
		ObjectDeclContext _localctx = new ObjectDeclContext(Context, State);
		EnterRule(_localctx, 14, RULE_objectDecl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 148;
			Match(T__0);
			State = 149;
			Match(T__13);
			State = 150;
			typedNameList();
			State = 151;
			Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InitContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public InitElContext[] initEl() {
			return GetRuleContexts<InitElContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public InitElContext initEl(int i) {
			return GetRuleContext<InitElContext>(i);
		}
		public InitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_init; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPddlVisitor<TResult> typedVisitor = visitor as IPddlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InitContext init() {
		InitContext _localctx = new InitContext(Context, State);
		EnterRule(_localctx, 16, RULE_init);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 153;
			Match(T__0);
			State = 154;
			Match(T__14);
			State = 158;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__0) {
				{
				{
				State = 155;
				initEl();
				}
				}
				State = 160;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 161;
			Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InitElContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LiteralContext literal() {
			return GetRuleContext<LiteralContext>(0);
		}
		public InitElContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_initEl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPddlVisitor<TResult> typedVisitor = visitor as IPddlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInitEl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InitElContext initEl() {
		InitElContext _localctx = new InitElContext(Context, State);
		EnterRule(_localctx, 18, RULE_initEl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 163;
			literal();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GoalContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public GoalDescContext goalDesc() {
			return GetRuleContext<GoalDescContext>(0);
		}
		public GoalContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_goal; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPddlVisitor<TResult> typedVisitor = visitor as IPddlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGoal(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GoalContext goal() {
		GoalContext _localctx = new GoalContext(Context, State);
		EnterRule(_localctx, 20, RULE_goal);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 165;
			Match(T__0);
			State = 166;
			Match(T__15);
			State = 167;
			goalDesc();
			State = 168;
			Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
